objects/Student_Scoring_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Points</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Skill</description>
        <globalPicklist>Skills</globalPicklist>
        <label>Skill</label>
        <type>Picklist</type>
    </fields>
    <label>Student Scoring Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SK-{00000}</displayFormat>
        <label>Student Scoring Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Scoring Skill</pluralLabel>
    <recordTypes>
        <fullName>Java</fullName>
        <active>true</active>
        <description>Java</description>
        <label>Java</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHP</fullName>
        <active>true</active>
        <description>PHP</description>
        <label>PHP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce</fullName>
        <active>true</active>
        <description>Salesforce</description>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>